2.0.5: bug fixes from a full review, JDK 24+ native access
Bugs:
- compute with a nil output path threw NullPointerException instead of
  returning the rows; so did computing a dataframe built from a function
  to a file.
- compute :select or :exclude with more than 8 columns wrote them in hash
  order.
- compute :header false returned a dataframe that read the first data
  row as the header.
- Join key validation never fired (are-in returns a seq, always truthy);
  unknown key columns now throw TypeException.
- rolling-join-backward ignored :limit on disk and picked the farthest
  match in memory.
- A failed set-type rolled back only the formatter, leaving a throwing
  parser on the column.
- rename-col onto an existing name silently dropped a column; it throws.
- Formatters of unselected columns were applied to whichever column took
  their index in group-by aggregates and joins.
- A simple aggregate over zero rows wrote the unbound start sentinel.
- print-df never printed "..." and dropped a row at exactly return-size.
- preview :format true turned filtered-out rows into all-nil rows.
- An Error (e.g. AssertionError) during a job left Onyx running.
- Group files read by aggregates and outer joins were never closed.
- gb-aggregate median and sd could return longs; skew returned a large
  value instead of NaN for constant double columns.

JDK: --enable-native-access=ALL-UNNAMED in :jvm-opts and the README
(lz4, via nippy, loads native code; JDK 24+ warns). CI adds JDK 25 and
moves to actions/setup-java@v5.

Docs corrected against the code (preview, sort, joins, rolling joins,
aggregate, compute, melt example, extensions). Tests: regression_test
covers the Onyx-side fixes, api_test the rest; get-diff compares the
header exactly and no longer retries; inmemory tests that skipped
:in-memory now pass it; dead commented-out comparisons removed. Unused
diagrams and a Jupyter checkpoint removed.